# qflags

./: .travis.sh  .travis.yml  CMakeLists.txt  LICENSE  Readme.md  cmake_visual_studio_2015_clang.bat  cmake_visual_studio_2015_x64.bat
cmake/: cmake_msys_makefiles.sh  cmake_unix_makefiles.sh  cmake_visual_studio_2013_x64.bat  cmake_visual_studio_2015_clang.bat  cmake_visual_studio_2015_x64.bat
cmake/modules/: Findgoogletest.cmake  Readme.cmake  Readme.conf
include/qflags/: argument.hpp  boolean_option.hpp  choice_option.hpp  command.hpp  command_line.hpp  flag.hpp  integer_option.hpp  parser.hpp  qflags.h  range_option.hpp  string_option.hpp
sample/: levenshtein.cpp  trivial.cpp
src/: argument.cpp  boolean_option.cpp  choice_option.cpp  command.cpp  command_line.cpp  flag.cpp  integer_option.cpp  parser.cpp  qflags-all.cpp  qflags.cpp  range_option.cpp  string_option.cpp
test/: boolean_option.cpp  choice_option.cpp  command.cpp  command_line.cpp  flag.cpp  integer_option.cpp  parser.cpp  qflags_gtest.h  range_option.cpp  repeated_option.cpp  string_option.cpp
